service.yml
kind: Service
apiVersion: v1
metadata:
  name: train-schedule-service
spec:
  type: NodePort
  nodePort: 80
  selector:
    app: train-schedule
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
