ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: traiun-schedule-ingress
spec:
  backend:
    serviceName: train-schedule-service
    servicePort: 80
